--- a/Oblakoo/MainForm.resx
+++ b/Oblakoo/MainForm.resx
@@ -124,9 +124,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADy
-        EAAAAk1TRnQBSQFMAgEBCwEAAaABAAGgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACU
+        FQAAAk1TRnQBSQFMAgEBDwEAAagBAAGoAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAAUADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -153,51 +153,71 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/4YABf8LAAX/CAAB/wL0
-        Af8EAAH/AvQB/xYAAfMBFAIAAQ4B7AH/CQAB9AHsAW0B6gFtAe8B/wcAAbwCDgEHBAAB7wIOAfAVAAH0
-        ARAFAAHwBP8EAAH0AesF6gHxBP8DAAHsAwABBwL/Ae8DAAHsFAAB8wERCgAB7AMAAfQB6wrqAe8DAAHx
-        AQ4CAAEOAQcB7wMAAQ4B8hMAAfQBEAcAAQ8DEQHvAgAB9AHrB+oBbQPsAbwEAAHwAQ4GAAEOAfAUAAHq
-        AwABEQHyAewCAAG8BgAB7QPqAewB8wHvAuoB8QkAAfABDgQAAQ4B8RUAAUMDAAHqAf8BBwIAAbwGAAHs
-        A+oB7QH/AfAC6gHxCQAB/wHsBAAB7QH/FQABBwQAARQBDgIAAewDvAH0AgAB8APqAW0B7AFtAuoB7wPx
-        AfQFAAHvBQABDgEHFgAB7wsAAW0DAAEHAW0K6gGSAwAB/wHvAwACDgMAAQcB/xQAAf8B7wYAAW0DkgHx
-        AwAB/wEHBuoBkgMHAfIDAAG8AwABDgHxAfABDgIAAQ4B8BYAAe8EAAEOAfQJAAEHAW0D6gFtAf8HAAHs
-        AgABDgHwAgAB8AEOAgAB7BYAAf8B8AKSAfcB9AoAAf8B8gMHAfQIAAHxAQ4BDwHxBAAB8AEOAQ8B8jUA
-        Av8GAAL/WgAC/w4AAv8KAAr/BgAK/wkAAf8CbQH/DQABEgHsCQAB/wFtCAAB6wH/BAAB/wFtCAAB7AH/
-        BwAB/wHqAgAB6gH/CgAC/wERARIC/wcAAfMKAAH/BAAB8wEAAQcGvAEHAQAB/wcAAesBDgEAAQ4BAAHs
-        CgABbQEUAQ4BEAFDAewHAAHzCgAB/wQAAfMBAAETBhIBEwEAAf8HAAHxAfABEQESAfAB8QoAAfIBDgIA
-        AQ4B8gcAAfMKAAH/BAAB8wEAAfQG/wH0AQAB/wQAAfMDvAH/AUMB6gH/A7wB8wQAAfMCvAHzAfEBDgEP
-        AfIB8wK8AfMEAAHzCgAB/wQAAfMBAAHsBpIB7AEAAf8CAAH/AfcEAAHwAvMB8AQAAe8C/wH3AwABDgHy
-        AvMB8gEOAwAB7wH/AgAB8woAAf8EAAHzAQAB7QaSAe0BAAH/AgAB9AEOBAABDwKSAQ4EAAEPAf8B9AEO
-        BAABDwGSAe0BDgQAAQ8B/wIAAfMKAAH/BAAB8wEAAfIG8wHyAQAB/wIAAfQNAAEOAf8B9A0AAQ4B/wIA
-        AfMKAAH/BAAB8wEACBEBAAH/AgAB/wHqDAAB6wL/AeoMAAHrAf8CAAHzCgAB/wQAAfMBAAEHBrwBBwEA
-        Af8DAAH/AewJAAEOAe8B/wIAAf8B7AkAAQ4B7wH/AwAB8wYAAxEB6gH/BAAB8wYAAxEB6gH/BAAB8gkA
-        AUMB/wQAAfEJAAEVAf8EAAHzBQABEgH0ArwB8AH/BAAB8wUAARIB9AK8AfAB/wQAAf8B7QERAZIBbQUA
-        AZIFAAH/Ae0BEQGSAW0FAAGSBQAB8wUAARIBvAEAAQ4B8AUAAfMFAAESAbwBAAEOAfAHAAH/AQAB9AET
-        AwAB7AH/BwAB/wEAAfQBEwMAAewB/wUAAfMFAAESAbwBDgHxBgAB8wUAARIBvAEOAfELAAH/AfIB8AHz
-        Af8LAAH/AfIB8AHzAf8GAAH/ARIEAAFtAvAHAAH/ARMEAAFtAvAoAAH/BPMC/wkAAf8E8wL/GQAK/wkA
-        BP8NAAL/BwAB/wEHAeoKEgHqAbwDAAH/AW0IAAHrAf8IAAG8AQ4BDwHwDAAB8gIQAfMGAAH0AQ4MAAEP
-        Af8CAAHzCgAB/wYAAf8BvAQAAfAB/woAAZICAAGSBgAB8w4AAf8CAAHzCgAB/wYAAbwBDgQAAQ4B8AoA
-        AZICAAGSBgAB8w4AAf8CAAHzCgAB/wQAAf8BvAgAAfAB/wgAAZICAAGSBgAB8w4AAf8CAAHzCgAB/wQA
-        AbwBDggAAQ4B8AgAAZICAAGSBgAB8w4AAf8CAAHzCgAB/wQAAQ4CAAEPAeoCAAHqAQ8CAAEOAf8HAAGS
-        AgABkgYAAfMOAAH/AgAB8woAAf8EAAESAQABEAHzAZICAAGSAfMBDwEAARIEAAH/AfAB9AEAAZICAAGS
-        AQAB9AHwAf8CAAHzDgAB/wIAAfMKAAH/BAAB/wHwAfQBAAGSAgABkgEAAfQB8AH/BAAB6gEAAREB9AGS
-        AgABkgHzAQ8BAAESAgAB8w4AAf8CAAHzCgAB/wgAAZICAAGSCAABDgIAARAB6gIAAeoBEQIAAQ4B/wEA
-        AfMNAAEQAf8CAAHzBgADEQHqAf8IAAGSAgABkggAAbwJAAEOAbwCAAHzBgABFAaSAfMDAAHzBQABEgH0
-        ArwB8AH/CAABkgIAAZIIAAH/AQcIAAG8Af8CAAHzBgABkgoAAfMFAAESAbwBAAEOAfAJAAGSAgABkgoA
-        AQcFAAEOAbwEAAH0AQ4FAAEHCgAB8wUAARIBvAEOAfEKAAGSAgABkgoAAf8BBwQAAbwB/wQAAf8BBwFD
-        AxEB7AH/CgAB/wESBAABbQLwCwAB8gIOAfIMAAEHAg4BvBkAAf8E8wL/DAAB/wL0Af8MAAH/AvQB/wYA
-        AUIBTQE+BwABPgMAASgDAAFAAwABMAMAAQEBAAEBBQABgAEBFgAD/wEABv8CAAb/AgAB+AE/AfgBPwLD
-        AgAB8AEfAfABHwLDAgAB4AEBAeABAQHAAQMCAAHAAQEBwAEBAcABAwIAAYABAQGAAQEB4AEHAgABgAEf
-        AYABHwHwAQ8CAAGAAR8BgAEfAfABDwIAAYABAQGAAQEB8AEPAgABwAEBAcABAQHAAQMCAAHAAQEBwAEB
-        AcABAwIAAfABHwHwAR8BwQGDAgAB8AE/AfABPwLDAgAE/wLnAgAG/wIAAf4BfwH+AX8B4AEHAeABBwH8
-        AT8B/gF/AcABAwHAAQMB+AEfAfgBHwHAAQMBwAEDAfgBHwH4AR8BwAEDAcABAwH4AR8B+AEfAcABAwHA
-        AQMBwAEDAcABAwHAAQMBwAEDBAABwAEDAcABAwQAAcABAwHAAQMEAAHAAQMBwAEDBAABwAEDAcABAwGA
-        AQEBgAEBAcABAwHAAQMBwAEDAcABAwHAAQMBwAEDAcABBwHAAQcBwAEHAcABBwH0AQcB9AEHAcABDwHA
-        AQ8B/gEPAf4BDwHAAR8BwAEfBP8B4AE/AeABPwL/AeABBwH8AT8B/gF/AQABAQHAAQMB/AE/AfwBPwIA
-        AcABAwHwAQ8B/AE/AgABwAEDAfABDwH8AT8CAAHAAQMBwAEDAfwBPwIAAcABAwHAAQMB/AE/AgABwAED
-        AcABAQH8AT8CAAHAAQMBwAEDAcQBIwIAAcABAwHEASMBwAEDAgABwAEDAfwBPwHAAQECAAHAAQMB/AE/
-        AcABAwEAAQEBwAEDAfwBPwHAAQMBAAH/AcABBwH8AT8B8AEPAQAB/wHAAQ8B/AE/AfABDwEAAf8BwAEf
-        AfwBPwH8AT8C/wHgAT8B/AE/AfwBPws=
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wgAAv8OAAHwAe8B/wwA
+        Af8B7QH3AfQcAAH0AvAB9AwAAfQBFQEUAZIMAAH3AkMBvBkAAv8BAAHzAvAB8wEAAv8GAAP/AfQBEwEU
+        Ae8BAAG8AZIB9AQAAfQB7AHvAf8B8AERARUB8gH0AewB9wH/FAAB9ALvAfMB/wHzAfIC/wL0Af8EAAH/
+        A/QB/wHyAbwC9AIVAewEAAGSAhUB8AEAAvQB/wHtAhEB8BQAAfIC7wHxBAAB/wL0Af8EAAH/A/QEAAH0
+        ARMBFQHvBAABvAEVARMB8wQAAbwBEAEVAfMUAAH/AvAB/wQAAf8C9AH/BQAD/wUAAfMB8AH/BQAC9AYA
+        AvQUAAL0CQAB/wL0AgAB9AHzAf8JAAHwAfcC/wGSAe8B9AgAAf8B7wEHAf8QAAHzAewB6wHyCAAB8gET
+        ARUB8AH/AvAB8ggAAfQBEQFDAe0B7wIUAbwIAAEHAewB6wHwEAAB8AHrAewBBwgAAbwCFAHvAf8C8AHz
+        CAAB9AEVAUMB9wHwARUBEwHyCAAB8gHrAewB8xAAAf8BBwHvAf8IAAH0Ae8BkgH/AQAB9AHzAf8IAAH/
+        AfIBvAH0AQAC9AH/CQAC9BQAAvQGAAL0BgAB8wHxAf8FAAG8Ae0B9AQAAf8C9AH/BAAB/wLwAf8UAAHz
+        ARUBEAG8BAAB8wETARUBvAQAAf8C7wHwBAAB9AEQAREB7AQAAf8C9AH/BAAB8QLvAfIUAAHwAhEB7QH/
+        AvQBAAHwAhUBkgQAAf8C7wHwAQAB8gEHAf8B9AEVAREB9wQAAf8C9AL/AfIB8wH/AfMC7wH0FAAB/wH3
+        AewB9AHyARUBEQHwAf8B7wHsAfQFAAH0AfIB/wH0AesB7AHvAQAB8wHwAf8FAAL/AQAB8wLwAfMBAAL/
+        GQABvAJDAfcMAAH0AewB6wEHDAAB9ALwAfQcAAH0AfcB7QH/DQAB8wHwAf8NAAL/TQAB/wHwAfM9AAEH
+        AesB7AH0CwAF/wsABf8IAAH/AvQB/wQAAf8C9AH/BAAB/wHwAfMBAAHvAewB6wH0Af8B8gH0BwAB8wEU
+        AgABDgHsAf8JAAH0AewBbQHqAW0B7wH/BwABvAIOAQcEAAHvAg4B8AQAAfcBEQEVAfQB/wEHAfIBAAHw
+        Au8B/wUAAfQBEAUAAfAE/wQAAfQB6wXqAfEE/wMAAewDAAEHAv8B7wMAAewEAAHsAREBEAH0BAAB8ALv
+        Af8EAAHzAREKAAHsAwAB9AHrCuoB7wMAAfEBDgIAAQ4BBwHvAwABDgHyBAAB9AHtAbwFAAH/AfEB8wQA
+        AfQBEAcAAQ8DEQHvAgAB9AHrB+oBbQPsAbwEAAHwAQ4GAAEOAfADAAH0AbwB8gH/CAAB/wHzAfQCAAHq
+        AwABEQHyAewCAAG8BgAB7QPqAewB8wHvAuoB8QkAAfABDgQAAQ4B8QQAAfcBQwEVAfQIAAHzAvAB/wEA
+        AUMDAAHqAf8BBwIAAbwGAAHsA+oB7QH/AfAC6gHxCQAB/wHsBAAB7QH/BAAB7QFDAREB9AgAAfIC8AH/
+        AQABBwQAARQBDgIAAewDvAH0AgAB8APqAW0B7AFtAuoB7wPxAfQFAAHvBQABDgEHBAAB/wH3AfAJAAH/
+        AfMB9AMAAe8LAAFtAwABBwFtCuoBkgMAAf8B7wMAAg4DAAEHAf8EAAH/AfAB8wUAA/8FAAH/Ae8GAAFt
+        A5IB8QMAAf8BBwbqAZIDBwHyAwABvAMAAQ4B8QHwAQ4CAAEOAfAEAAHvARUBEwH0BAAD9AH/BgAB7wQA
+        AQ4B9AkAAQcBbQPqAW0B/wcAAewCAAEOAfACAAHwAQ4CAAHsBAAB7AIVAvQBvAHyAf8D9AH/BgAB/wHw
+        ApIB9wH0CgAB/wHyAwcB9AgAAfEBDgEPAfEEAAHwAQ4BDwHyBAAB9AGSAbwBAAHvARQBEwH0A/8mAAL/
+        BgAC/wkAAZIBFAEVAfQ8AAH/Ae8B8A4AAv8OAAL/CgAK/wYACv8JAAH/Am0B/w0AARIB7AkAAf8BbQgA
+        AesB/wQAAf8BbQgAAewB/wcAAf8B6gIAAeoB/woAAv8BEQESAv8HAAHzCgAB/wQAAfMBAAEHBrwBBwEA
+        Af8HAAHrAQ4BAAEOAQAB7AoAAW0BFAEOARABQwHsBwAB8woAAf8EAAHzAQABEwYSARMBAAH/BwAB8QHw
+        AREBEgHwAfEKAAHyAQ4CAAEOAfIHAAHzCgAB/wQAAfMBAAH0Bv8B9AEAAf8EAAHzA7wB/wFDAeoB/wO8
+        AfMEAAHzArwB8wHxAQ4BDwHyAfMCvAHzBAAB8woAAf8EAAHzAQAB7AaSAewBAAH/AgAB/wH3BAAB8ALz
+        AfAEAAHvAv8B9wMAAQ4B8gLzAfIBDgMAAe8B/wIAAfMKAAH/BAAB8wEAAe0GkgHtAQAB/wIAAfQBDgQA
+        AQ8CkgEOBAABDwH/AfQBDgQAAQ8BkgHtAQ4EAAEPAf8CAAHzCgAB/wQAAfMBAAHyBvMB8gEAAf8CAAH0
+        DQABDgH/AfQNAAEOAf8CAAHzCgAB/wQAAfMBAAgRAQAB/wIAAf8B6gwAAesC/wHqDAAB6wH/AgAB8woA
+        Af8EAAHzAQABBwa8AQcBAAH/AwAB/wHsCQABDgHvAf8CAAH/AewJAAEOAe8B/wMAAfMGAAMRAeoB/wQA
+        AfMGAAMRAeoB/wQAAfIJAAFDAf8EAAHxCQABFQH/BAAB8wUAARIB9AK8AfAB/wQAAfMFAAESAfQCvAHw
+        Af8EAAH/Ae0BEQGSAW0FAAGSBQAB/wHtAREBkgFtBQABkgUAAfMFAAESAbwBAAEOAfAFAAHzBQABEgG8
+        AQABDgHwBwAB/wEAAfQBEwMAAewB/wcAAf8BAAH0ARMDAAHsAf8FAAHzBQABEgG8AQ4B8QYAAfMFAAES
+        AbwBDgHxCwAB/wHyAfAB8wH/CwAB/wHyAfAB8wH/BgAB/wESBAABbQLwBwAB/wETBAABbQLwKAAB/wTz
+        Av8JAAH/BPMC/xkACv8JAAT/DQAC/wcAAf8BBwHqChIB6gG8AwAB/wFtCAAB6wH/CAABvAEOAQ8B8AwA
+        AfICEAHzBgAB9AEODAABDwH/AgAB8woAAf8GAAH/AbwEAAHwAf8KAAGSAgABkgYAAfMOAAH/AgAB8woA
+        Af8GAAG8AQ4EAAEOAfAKAAGSAgABkgYAAfMOAAH/AgAB8woAAf8EAAH/AbwIAAHwAf8IAAGSAgABkgYA
+        AfMOAAH/AgAB8woAAf8EAAG8AQ4IAAEOAfAIAAGSAgABkgYAAfMOAAH/AgAB8woAAf8EAAEOAgABDwHq
+        AgAB6gEPAgABDgH/BwABkgIAAZIGAAHzDgAB/wIAAfMKAAH/BAABEgEAARAB8wGSAgABkgHzAQ8BAAES
+        BAAB/wHwAfQBAAGSAgABkgEAAfQB8AH/AgAB8w4AAf8CAAHzCgAB/wQAAf8B8AH0AQABkgIAAZIBAAH0
+        AfAB/wQAAeoBAAERAfQBkgIAAZIB8wEPAQABEgIAAfMOAAH/AgAB8woAAf8IAAGSAgABkggAAQ4CAAEQ
+        AeoCAAHqARECAAEOAf8BAAHzDQABEAH/AgAB8wYAAxEB6gH/CAABkgIAAZIIAAG8CQABDgG8AgAB8wYA
+        ARQGkgHzAwAB8wUAARIB9AK8AfAB/wgAAZICAAGSCAAB/wEHCAABvAH/AgAB8wYAAZIKAAHzBQABEgG8
+        AQABDgHwCQABkgIAAZIKAAEHBQABDgG8BAAB9AEOBQABBwoAAfMFAAESAbwBDgHxCgABkgIAAZIKAAH/
+        AQcEAAG8Af8EAAH/AQcBQwMRAewB/woAAf8BEgQAAW0C8AsAAfICDgHyDAABBwIOAbwZAAH/BPMC/wwA
+        Af8C9AH/DAAB/wL0Af8GAAFCAU0BPgcAAT4DAAEoAwABQAMAAUADAAEBAQABAQYAAQIWAAP/AQAB/gF/
+        Af4BPwH8AT8CAAH8AT8B/AE/AfwBPwIAAeQBJwHgASMBwAEDAgABwAEDAcABAwHCAQMCAAbDAgACwwLj
+        AucCAAGfAfEBjwH4AQ8B8AIAAQ8B8AEPAfABDwHwAgABDwHwAQ8B8AEPAfACAAEPAfABjwHwAY8B+QIA
+        AucC4wLDAgAGwwIAAcABQwHCAQMBwAEDAgABwAEDAeABIwHkAScCAAH8AT8B/AE/AfwBPwIAAfwBPwH+
+        AT8B/gF/AgAG/wH8AX8G/wH8AT8B+AE/AfgBPwLDAcQBBwHwAR8B8AEfAsMBwAFDAeABAQHgAQEBwAED
+        AsMBwAEBAcABAQHAAQMCxwGAAQEBgAEBAeABBwEPAfEBgAEfAYABHwHwAg8B8AGAAR8BgAEfAfACDwHw
+        AYABAQGAAQEB8AEPAR8B8QHAAQEBwAEBAcABAwLHAcABAQHAAQEBwAEDAsMB8AEfAfABHwHBAYMBwAED
+        AfABPwHwAT8CwwHEAQcE/wLnAfwBPwb/AfwBfwH+AX8B/gF/AeABBwHgAQcB/AE/Af4BfwHAAQMBwAED
+        AfgBHwH4AR8BwAEDAcABAwH4AR8B+AEfAcABAwHAAQMB+AEfAfgBHwHAAQMBwAEDAcABAwHAAQMBwAED
+        AcABAwQAAcABAwHAAQMEAAHAAQMBwAEDBAABwAEDAcABAwQAAcABAwHAAQMBgAEBAYABAQHAAQMBwAED
+        AcABAwHAAQMBwAEDAcABAwHAAQcBwAEHAcABBwHAAQcB9AEHAfQBBwHAAQ8BwAEPAf4BDwH+AQ8BwAEf
+        AcABHwT/AeABPwHgAT8C/wHgAQcB/AE/Af4BfwEAAQEBwAEDAfwBPwH8AT8CAAHAAQMB8AEPAfwBPwIA
+        AcABAwHwAQ8B/AE/AgABwAEDAcABAwH8AT8CAAHAAQMBwAEDAfwBPwIAAcABAwHAAQEB/AE/AgABwAED
+        AcABAwHEASMCAAHAAQMBxAEjAcABAwIAAcABAwH8AT8BwAEBAgABwAEDAfwBPwHAAQMBAAEBAcABAwH8
+        AT8BwAEDAQAB/wHAAQcB/AE/AfABDwEAAf8BwAEPAfwBPwHwAQ8BAAH/AcABHwH8AT8B/AE/Av8B4AE/
+        AfwBPwH8AT8L
 </value>
   </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -226,7 +246,7 @@
         ri97ckABSfTfV6Hbdem4emeterLKbZSQOT3s8VU5Td6sJIqeOoN4X5JLcEgAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="refreshVaultToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="refreshFilesToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEeSURBVDhPxdI/LwRRFIbxQYSsEBGK3QaNQiEaolPJ9jq9
@@ -254,6 +274,9 @@
   </metadata>
   <metadata name="folderContextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>493, 56</value>
+  </metadata>
+  <metadata name="loadingFoldersTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>676, 56</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>98</value>
