--- a/Oblqo/MainForm.resx
+++ b/Oblqo/MainForm.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACA
-        IgAAAk1TRnQBSQFMAgEBGwEAAXgBAQF4AQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        IgAAAk1TRnQBSQFMAgEBGwEAAZABAQGQAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAAXADAAEBAQABCAYAARwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -278,13 +278,72 @@
   <metadata name="taskMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>534, 56</value>
   </metadata>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>169, 95</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="activeTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE2SURBVDhPjZK9LkVBFIWHEIWEVkGnUFGIN0DCI4lGPIEE
+        CfEcEgkPQERPRyUqEj/F/Pn23H2cmcngrGTlnjtr7T171oxpI44bExbgClyG86O1QbBbxrg7+A69Ur5v
+        0DbU1EKYNsafwfgPj/FOaVGOvNh9wof+f04X+D3Vog4ydmGkmeziduFrpSntthZLOHLmwnCiIohL6LeV
+        LrxCG8MgaUtIhZg1EMQJPDvwrfe4F9ZnEeWqJOm/GnQIi3gftYGjwZwscs9DGsi4cRXvU92ARzLkCH4P
+        31fv+TlCCvG6F+oGYQ29FeIFtRKiwK5Xol6j3y93zWk3tbiDP8IsjwTRfcD7sqBjyutQi3KkHRm9VVTw
+        gNEntaiF9Cov2YmQJGln4TNr542xf0O6MhKWaxKGmdFaDWO+ARF6M1OCKIP4AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="finishedTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFKSURBVDhPjVK9SgNBGBwFERRia6FYa5GAz6CCPpKNzyCo
+        oNjZWVikOBLzHTY2BrG0tjwMCoKdGp3Z3UsutxvJwNzPtzP77c4ukjjCPDpYR44WDE3cYc3VZoJhn8Yn
+        8pP8CdR3n2O7QZVAF8sUXZK//9JwhgyLwVXBLGbRMCQvgivALzttGPONfK78H3izwvF7roonaRiQW3jE
+        At8WanrOIaStkCT+4MAh2Qn/Er7gFpuuWRtLrPVD/RU9rGjvLVJJy3DlhOqU45qiwYTZGHU5cY5vHu+q
+        9t/kj5/A8E5uO4M/lQ337TvfOE00gS7JeAtiMeoqxJ09R1vwIT5Eg1pJunOp6fLJEIUedhKigqL7RL3k
+        njeXMJySw4SwTuV1ElwV6HoazmvimIZjd0pToVupy6IclLThi++CzMjasqdB4ShhHZOYoeFqEYA/fKkX
+        VslE5nEAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="cancelledTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE7SURBVDhPdZLBSgNBEETHBL8g6mFJUE+BXP0xkV0U0dVb
+        8oOiiUIMih8geFBi4quhB3tnsw1FDTVVPT2zG/LahtDfhDCBzzzQxnDPbN31G8IU/BDYeqB9w3dmaxfd
+        9zHN8mAOPPd4+xb7L4XBZlfIA89aTSyGQjeEqTM8whfwk9PmcAU/Jw3U8U1YTNjwd67UGB6hL4EaHpl2
+        bh41/YIPNYFeOIW18QKfWmAIjm09Zu9NHoei1UCQEf1EQRWaplnlPtDZQGPHk1Wsh2gP3mNoN8CoB0t3
+        HqVJtGbvNfkMRbqbfpIoEriygPQVWLBOb1ImH/onPNAEPRa3bmMJX8LvTvuAr70GSrJ7ahwLocawdoad
+        wKNPHj91o2yS2ps7UDVOzgvDDafoJ2kE0XTn0mzdpUnAAeYiw6B9cgh/EONH9Ob+qLwAAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="queuedTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFPSURBVDhPpZJLSsRAGIQzgrgQdCuieINxIYgHUEEPkl1W
+        eSdgXIlbQQXFS7hRBOcAis4xVGYtCM74+CrTM9MkMr5+KLrzV9WfTqWdr6ooiok8zxfjOF5O07QZRdGC
+        eoYeX1mWbYE2eMb8JmgPbtlvGFm9fN+fRnQGPr7Bsed5U8Y2KoifmIV3cGps/aKhY9uic467x/oK9Ck7
+        rJeGK5EkyXZpVjg09M1DUgFCNTA+gHvt6a/aGvot9R2JaSikIRmG4byGawDPd9rzxhVbAzr8pVnH/Col
+        /dsBvSAI5iRq/muALgkPf/8EhYjwxibJZcmE+wja+BXi2oA3uFJfwxXkepVk6D7oghewC1q2hhNtluZB
+        ITiC0CWxB9WATnkdGtuodD0hT6qGKtAcuK47aWz1QqRbeQ06oIehy/rEelE79phqKGH9JoFAZ9TrU3Y5
+        zie1G43spVxS5QAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="mainMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
   <metadata name="mainTool.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>242, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="newAccountStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACaSURBVDhPtdNBCoJQEIDhh4RdJbqGbYNOEdIFWrly4cqt
+        1Co8TbfoFBJkC/sHnIc95MkQ/fBBTG9mp4u0whYbJDKwVuGNHqUMrHUYRk8ZWNNlZc58YIfjRHhg+l+G
+        rwqEC0vO8D0w9yjmDl+DuUcxNXwpTrjgOgoXdC5vcshOtPCAuZ8PvKDL8ttcCz1wk4G1NQ7YQ77Mf+Tc
+        B0Q4VfNl3C/DAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="uploadToolStripDropDownButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -343,6 +402,6 @@
     <value>473, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>117</value>
+    <value>25</value>
   </metadata>
 </root>
