Fixed bug with task manager

--- a/Oblqo/MainForm.resx
+++ b/Oblqo/MainForm.resx
@@ -124,9 +124,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACA
-        IgAAAk1TRnQBSQFMAgEBGwEAAZABAQGQAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAAXADAAEBAQABCAYAARwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACQ
+        IwAAAk1TRnQBSQFMAgEBHAEAAZABAQGQAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAAYADAAEBAQABCAYAASAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -153,18 +153,22 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wYABv8KAAb/CgAG/xkA
-        AfMB5gHIAvwByAHmAfMIAAHzAeYByAL8AcgB5gHzCAAB8wHjAUcC+QFHARYB8xYAAf8B1gj8AdYB/wQA
-        Af8B1gj8AdYB/wQAAf8BlAj5AZQB/xQAAdYD/AHIBvwB1gQAAdYK/AHWBAABlAr5AZQTAAHzA/wB1gH/
-        AQkG/AHzAgAB8wP8AeYB1gL8AQkB5gP8AfMCAAHzDPkB8xEAAf8B5gP8AdYCAAH0AeYE/AHmAv8B5gP8
-        Av8ByAHmAf8B9AP8AeYC/wHjDPkBFgH/EAAB/wT8AdYDAAH/AQkD/AHIAv8E/AH/AQAByAHmAQAB9AP8
-        AcgC/wT5BkcD+QFHAf8QAAH/BPwB1gQAAf8B9AHIAvwC/wT8Af8BAAHIAeYBAAH0BPwC/wP5Af8FAAH/
-        AfQD+QH/EAAB/wT8AdYFAAH/AcgC/AL/BPwB/wEAAcgB5gEAAfQE/AL/A/kB/wYAAf8D+QH/EAAB/wT8
-        AdYDAAH/Ad0ByAL8AcgC/wT8Af8BAAHIAeYBAAH0A/wByAL/A/kBRwYXAUcC+QFHAf8QAAH/AeYD/AHW
-        AgAB/wHmBPwB5gL/AeYD/AL/AcgB5gH/AfQD/AHmAv8BFwz5AeMB/xEAAfMD/AHWAf8B3QHIBfwB8wIA
-        AfMD/AHmAdYC/AEJAeYD/AHzAgAB8wz5AfMTAAHWA/wByAb8AdYEAAHWCvwB1gQAAZQK+QGUFAAB/wHW
-        CPwB1gH/BAAB/wHWCPwB1gH/BAAB/wGUCPkBlAH/FgAB8wHmBPwB5gHzCAAB8wHmBPwB5gHzCAAB8wEX
-        BPkB4wHzGQAG/woABv8KAAb/FQATBwLvBvcC7wMHBAAI/wkABv8FAAEHAfcBFQoQARUB9wMHAe8BEQgA
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ACgAG/woA
+        Bv8KAAb/CgAG/wkAAfMB5gHIAvwByAHmAfMIAAHzAeYByAL8AcgB5gHzCAAB8wHjAUcC+QFHARYB8wgA
+        AfMB7wHsAvgB7AHvAfMGAAH/AdYI/AHWAf8EAAH/AdYI/AHWAf8EAAH/AZQI+QGUAf8EAAH/AQcI+AG8
+        Af8EAAHWA/wByAb8AdYEAAHWCvwB1gQAAZQK+QGUBAABBwr4AbwDAAHzA/wB1gH/AQkG/AHzAgAB8wP8
+        AeYB1gL8AQkB5gP8AfMCAAHzDPkB8wIAAfMD+AHvAbwB+AHsAfAB7wP4AfMBAAH/AeYD/AHWAgAB9AHm
+        BPwB5gL/AeYD/AL/AcgB5gH/AfQD/AHmAv8B4wz5ARYC/wH3A/gC/wHsAfcB/wH0A/gB7wL/BPwB1gMA
+        Af8BCQP8AcgC/wT8Af8BAAHIAeYBAAH0A/wByAL/BPkGRwP5AUcC/wHsA/gB/wEAAewB9wEAAfQD+AHs
+        Av8E/AHWBAAB/wH0AcgC/AL/BPwB/wEAAcgB5gEAAfQE/AL/A/kB/wUAAf8B9AP5Af8B9AT4Af8BAAHs
+        AfcBAAH0BPgC/wT8AdYFAAH/AcgC/AL/BPwB/wEAAcgB5gEAAfQE/AL/A/kB/wYAAf8D+QH/AfQE+AH/
+        AQAB7AH3AQAB9AT4Av8E/AHWAwAB/wHdAcgC/AHIAv8E/AH/AQAByAHmAQAB9AP8AcgC/wP5AUcGFwFH
+        AvkBRwL/AewD+AH/AQAB7AH3AQAB9AP4AewC/wHmA/wB1gIAAf8B5gT8AeYC/wHmA/wC/wHIAeYB/wH0
+        A/wB5gL/ARcM+QHjAv8B9wP4Av8B7AH3Af8B9AP4Ae8B/wEAAfMD/AHWAf8B3QHIBfwB8wIAAfMD/AHm
+        AdYC/AEJAeYD/AHzAgAB8wz5AfMCAAHzA/gB7wG8AfgB7AHwAe8D+AHzAwAB1gP8AcgG/AHWBAAB1gr8
+        AdYEAAGUCvkBlAQAAQcK+AEHBAAB/wHWCPwB1gH/BAAB/wHWCPwB1gH/BAAB/wGUCPkBlAH/BAAB/wEH
+        CPgBBwH/BgAB8wHmBPwB5gHzCAAB8wHmBPwB5gHzCAAB8wEXBPkB4wHzCAAB8wH3AewC+AHsAfcB8wkA
+        Bv8KAAb/CgAG/woAAv8C9AL/BQATBwLvBvcC7wMHBAAI/wkABv8FAAEHAfcBFQoQARUB9wMHAe8BEQgA
         ARUB7wIHBAABvQb5Ab0IAAHzAZcBVQIzAVUBlwHzBAABBwERDAABFQMHAZIBAAFtBusBbQEAAe8CBwIA
         Af8BvQj5Ab0B/wQAAf8BmAgzAZgB/wIAAQcBDgwAARADBwHtAQAIEAEAAfcCBwIAAb0K+QG9BAABmAoz
         AZgCAAEHAQ4MAAEQAwcB7QEAAZIG9wGSAQAB9wIHAf8BvQL5AUcBvQFHAvkBRwG9AUcC+QG9Af8BAAHz
@@ -251,34 +255,34 @@
         AgAB8wYAARQGkgHzAwAB8wUAARIB9AK8AfAB/wgAAZICAAGSCAAB/wEHCAABvAH/AgAB8wYAAZIKAAHz
         BQABEgG8AQABDgHwCQABkgIAAZIKAAEHBQABDgG8BAAB9AEOBQABBwoAAfMFAAESAbwBDgHxCgABkgIA
         AZIKAAH/AQcEAAG8Af8EAAH/AQcBQwMRAewB/woAAf8BEgQAAW0C8AsAAfICDgHyDAABBwIOAbwZAAH/
-        BPMC/wwAAf8C9AH/DAAB/wL0Af8GAAFCAU0BPgcAAT4DAAEoAwABQAMAAXADAAEBAQABAQUAAYABAxYA
-        A/8BAAH4AR8B+AEfAfgBHwIAAfABDwHwAQ8B8AEPAgABwAEDAcABAwHAAQMCAAHAAQMBwAEDAcABAwIA
-        AYABAQGAAQEBgAEBAgABAwcAAQMBgAECAUAEAAEDAcABAgFAAQcBwAIAAQMB4AECAUABBwHgAgABAwGA
-        AQIBQAQAAQMHAAGAAQEBgAEBAYABAQIAAcABAwHAAQMBwAEDAgABwAEDAcABAwHAAQMCAAHwAQ8B8AEP
-        AfABDwIAAfgBHwH4AR8B+AEfBgAB8AEPAfgBHwQAAfABDwHwAQ8EAAHAAQMBwAEDBAABwAEDAcABAwYA
-        AYABAQQAAQQBIAYAAQIBQAEDBQABAQGAAQQBgAQAAQEBgAEIAUAEAAECAUABAAEgBAABBAEgCAABgAEB
-        BAABwAEDAcABAwQAAcABAwHAAQMEAAHwAQ8B8AEPBAAB8AEPAfgBH4AAAf4BPwH8AT8B8AEPAfABDwH8
-        AT8B/AE/AfABDwHwAQ8B4AEjAcABAwHAAQMBwAEDAcABAwHCAQMBwAEDAcABAwTDBAAC4wLnAQQBIAIA
-        AY8B+AEPAfABAgFAAgABDwHwAQ8B8AEBAYACAAEPAfABDwHwAQEBgAEBAYABjwHwAY8B+QECAUABAQGA
-        AuMCwwEEASABAQGABMMCAAEBAYABwgEDAcABAwHAAQMBwAEDAeABIwHkAScBwAEDAcABAwH8AT8B/AE/
-        AfABDwHwAQ8B/gE/Af4BfwHwAQ8B8AEPBP8B/AF/Af4BfwT/AfwBPwH8AT8B+AE/AsMBxAEHAeQBJwHw
-        AR8CwwHAAUMBwAEDAeABAQHAAQMEwwHAAQEBwAEDAscCwwGAAQEB4AEHAQ8B8QGfAfEBgAEfAfACDwHw
-        AQ8B8AGAAR8B8AIPAfABDwHwAYABAQHwAQ8BHwHxAQ8B8AHAAQEBwAEDAscC5wHAAQEBwAEDBMMB8AEf
-        AcEBgwHAAQMBwAFDAfABPwLDAcQBBwHAAQMC/wLnAfwBPwH8AT8E/wH8AX8B/AE/Af4BfwH+AX8B4AEH
-        Av8B/AE/Af4BfwHAAQMC/wH4AR8B+AEfAcABAwH4AT8B+AEfAfgBHwHAAQMB8AEfAfgBHwH4AR8BwAED
-        AeABAQHAAQMBwAEDAcABAwHAAQEEAAHAAQMBgAEBBAABwAEDAYABHwQAAcABAwGAAR8EAAHAAQMBgAEB
-        AYABAQGAAQEBwAEDAcABAQHAAQMBwAEDAcABAwHAAQEBwAEHAcABBwHAAQcB8AEfAfQBBwH0AQcBwAEP
-        AfABPwH+AQ8B/gEPAcABHwb/AeABPwT/AeABBwH8AT8B/gF/AQABAQHAAQMB/AE/AfwBPwIAAcABAwHw
-        AQ8B/AE/AgABwAEDAfABDwH8AT8CAAHAAQMBwAEDAfwBPwIAAcABAwHAAQMB/AE/AgABwAEDAcABAQH8
-        AT8CAAHAAQMBwAEDAcQBIwIAAcABAwHEASMBwAEDAgABwAEDAfwBPwHAAQECAAHAAQMB/AE/AcABAwEA
-        AQEBwAEDAfwBPwHAAQMBAAH/AcABBwH8AT8B8AEPAQAB/wHAAQ8B/AE/AfABDwEAAf8BwAEfAfwBPwH8
-        AT8C/wHgAT8B/AE/AfwBPws=
+        BPMC/wwAAf8C9AH/DAAB/wL0Af8GAAFCAU0BPgcAAT4DAAEoAwABQAMAAYADAAEBAQABAQYAAQQWAAP/
+        gQAB+AEfAfgBHwH4AR8B+AEfAfABDwHwAQ8B8AEPAfABDwHAAQMBwAEDAcABAwHAAQMBwAEDAcABAwHA
+        AQMBwAEDAYABAQGAAQEBgAEBAYABAQEDBwABAwGAAQIBQAIAAQIBQAEDAcABAgFAAQcBwAECAUABAwHg
+        AQIBQAEHAeABAgFAAQMBgAECAUACAAECAUABAwcAAYABAQGAAQEBgAEBAYABAQHAAQMBwAEDAcABAwHA
+        AQMBwAEDAcABAwHAAQMBwAEDAfABDwHwAQ8B8AEPAfABDwH4AR8B+AEfAfgBHwH4AR8EAAHwAQ8B+AEf
+        BAAB8AEPAfABDwQAAcABAwHAAQMEAAHAAQMBwAEDBgABgAEBBAABBAEgBgABAgFAAQMFAAEBAYABBAGA
+        BAABAQGAAQgBQAQAAQIBQAEAASAEAAEEASAIAAGAAQEEAAHAAQMBwAEDBAABwAEDAcABAwQAAfABDwHw
+        AQ8EAAHwAQ8B+AEfgAAB/gE/AfwBPwHwAQ8B8AEPAfwBPwH8AT8B8AEPAfABDwHgASMBwAEDAcABAwHA
+        AQMBwAEDAcIBAwHAAQMBwAEDBMMEAALjAucBBAEgAgABjwH4AQ8B8AECAUACAAEPAfABDwHwAQEBgAIA
+        AQ8B8AEPAfABAQGAAQEBgAGPAfABjwH5AQIBQAEBAYAC4wLDAQQBIAEBAYAEwwIAAQEBgAHCAQMBwAED
+        AcABAwHAAQMB4AEjAeQBJwHAAQMBwAEDAfwBPwH8AT8B8AEPAfABDwH+AT8B/gF/AfABDwHwAQ8E/wH8
+        AX8B/gF/BP8B/AE/AfwBPwH4AT8CwwHEAQcB5AEnAfABHwLDAcABQwHAAQMB4AEBAcABAwTDAcABAQHA
+        AQMCxwLDAYABAQHgAQcBDwHxAZ8B8QGAAR8B8AIPAfABDwHwAYABHwHwAg8B8AEPAfABgAEBAfABDwEf
+        AfEBDwHwAcABAQHAAQMCxwLnAcABAQHAAQMEwwHwAR8BwQGDAcABAwHAAUMB8AE/AsMBxAEHAcABAwL/
+        AucB/AE/AfwBPwT/AfwBfwH8AT8B/gF/Af4BfwHgAQcC/wH8AT8B/gF/AcABAwL/AfgBHwH4AR8BwAED
+        AfgBPwH4AR8B+AEfAcABAwHwAR8B+AEfAfgBHwHAAQMB4AEBAcABAwHAAQMBwAEDAcABAQQAAcABAwGA
+        AQEEAAHAAQMBgAEfBAABwAEDAYABHwQAAcABAwGAAQEBgAEBAYABAQHAAQMBwAEBAcABAwHAAQMBwAED
+        AcABAQHAAQcBwAEHAcABBwHwAR8B9AEHAfQBBwHAAQ8B8AE/Af4BDwH+AQ8BwAEfBv8B4AE/BP8B4AEH
+        AfwBPwH+AX8BAAEBAcABAwH8AT8B/AE/AgABwAEDAfABDwH8AT8CAAHAAQMB8AEPAfwBPwIAAcABAwHA
+        AQMB/AE/AgABwAEDAcABAwH8AT8CAAHAAQMBwAEBAfwBPwIAAcABAwHAAQMBxAEjAgABwAEDAcQBIwHA
+        AQMCAAHAAQMB/AE/AcABAQIAAcABAwH8AT8BwAEDAQABAQHAAQMB/AE/AcABAwEAAf8BwAEHAfwBPwHw
+        AQ8BAAH/AcABDwH8AT8B8AEPAQAB/wHAAR8B/AE/AfwBPwL/AeABPwH8AT8B/AE/Cw==
 </value>
   </data>
   <metadata name="taskMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>534, 56</value>
   </metadata>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="tasksToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>169, 95</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -402,6 +406,6 @@
     <value>473, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>25</value>
+    <value>203</value>
   </metadata>
 </root>
