--- a/Oblqo/MainForm.resx
+++ b/Oblqo/MainForm.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB8
-        IwAAAk1TRnQBSQFMAgEBHAEAAaABAQGgAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        IwAAAk1TRnQBSQFMAgEBHAEAAagBAQGoAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAAYADAAEBAQABCAYAASAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -290,11 +290,11 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE6SURBVDhPjVLNLkYxFDyEWEjYWrCzsGIh3gAJjyQ24gkk
-        SD7xHBIJD0DEnh0rsSLxk7S3rZnec9226cedZPLdrzPn9HRaqSNMivglcA1cBRfbtUGwOyLNvYj5AJ0S
-        380ttC011eBnRdw5GP7hKbwzWpQiLTZf2O2x/5/SePyeaVEHjp0Z0Yy7NPsoeCs0pd3VYobDM2eGkYpA
-        WIF+V+jkNbQJGJg2Q8rEpAERptBkD7733mNesT4PkVfFpP9q0MEvw/ukDRo0WOAi7nlIA44b1uF9Lhvg
-        kQw5gjuA77v3/B4hhnjTC2UDvzEmxEvUMkTCbhaiXqM7zHdNabe1uIM7gZmPBKL5hOEhL+gY8zrWohRx
-        R4xeK8p4hNGntaiG+Cqv2pCYtLHgC9YuKmOPQ7wyJMxrIv1cu1ZC5AeiiDMbzxicKAAAAABJRU5ErkJg
+        SIjnkEh4ACL27FiJFYmfVG9bM73num3TjzvJ5LtfZ87p6bRSRxgX8QvgCrgMzrdrg2C3RJo7EfMOOiW+
+        mxtoG2qqwU+LuDMw/MNjeKe0KEVabD6x20P/P6Xx+D3Vog4cOzOiGXdpdlHwWmhKu63FDIdnzgwnKgJh
+        CfptoZNX0MZgYNoMKROTBkSYQJMd+N56j3nB+ixEXhWT/qtBB78o8v2oDRo0mOMi7nlIA44bVtHgqWyA
+        RzLkCG4Pvq/e83uEGOJ1L5QN/NqIEC9QyxAJu16Ieo1uP981pd3U4g7uCGY+EojmA4b7vKBjzOtQi1LE
+        HTF6rSjjAUaf1KIa4qu8bENi0saCz1g7r4w9CvHKkDCvifQz7VoJkR9xDzMCqoAQaAAAAABJRU5ErkJg
         gg==
 </value>
   </data>
@@ -302,36 +302,36 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFOSURBVDhPjVKxSgQxFBwFERS0tVCstbgDv0EF/SQbv0FQ
-        QbGzs7CwWM7dLDY2HmJpbbkoCoKdejrzkr1bNzm5gdlsXt68l0yCJPYxjR5WUKILhw5usGyxieCwQ+ED
-        +UF+B+q/z7WtkJXANeaZdEb+/EuHY2SYDaoGJhGLOQYschpUAX7bacGIr+RjY77rxTLHn7mZ/Jc5Xthk
-        HfeY4egsVth3CsFtmaTkdy7vkb0wl/iJXLNmV5hjrG9xh2cWWdTZu6ScluDcEtWpxIV1booLWl0XLvHF
-        613S+Tuc+AIF3jjfMIG/lVX7950vLScqoEcyOoJYDbsKcWfP4RG8iXfRonaS7uypomaiUGAzkVSxyG0i
-        XnPbi2s4HHHrg0Rim/LrMKga0PN0OGklx3Q4sFsaC71KPRb5IKdzfHKsyIxsbXscZI4c1jWJGRYsFgH4
-        BVvEF0U5KZjlAAAAAElFTkSuQmCC
+        QbGzs7CwWG7dLDY2HmJpbbkoCoKdejrzkr1bNzm5gdlsXt68l0yCJPYxjR5WUKILhw5usGyxieCwQ+ED
+        +UF+B+q/z7WtkJVAjnkmnZE//9LhGBlmg6qBScRijgGLnAZVgN92WjDiK/nYmO96sczxZ24m/2WOFzZZ
+        xz1mODqLFfadQnBbJin5nct7ZC/MJX7CNdas2RXmGOtb3OGZRRZ19i4ppyU4t0R1KnFhnZvigpG6cIkv
+        Xu+Szt/hxBco8Mb5hgn8razav+98aTlRAT2S0RHEathViDt7Do/gTbyLFrWTdGdPFTUThQKbiaSKRW4T
+        8ZrbXlzD4Yg1B4nENuXXYVA1oOfpcNJKjulwYLc0FnqVeizyQU7n+ORYkRnZ2vY4yBw5rGsSMyxYLALw
+        C1AbFz/W8xhGAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="cancelledTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE9SURBVDhPdZLNSgNBEITbBJ8g6mFJUE+BXH0xkV0U0dWb
-        eUHxF2JQfADBgxoTv1p6sDObbShqqKnq6Zldy2tl1l+aTeCjCLQx3HNbd/2a3fyYfRNYRaB9wVduaxfd
-        twlP82AOPNd4+x77L4U5ZbkpFIFnoSYeQ6Gbxg6GO/gEvg/aA1zBT0kDdfMmLCZsxDtXagyP0GdADfdc
-        O3aPmn7Cu5pAL5zC2niGDz0wBPu+HrP3Kk9A0WogyIh+oKAKTdPMcx/obKCxm5NVrIdot9HjaDfAqAdL
-        dx6lSbRm7yX5HEW6m36SRiRw5gHpc/DIOr1JmXzoH/BAE/RYXIaNGXwKvwXtHT6PGijJbqlxUwg1hkUw
-        bAQeffLmU6+VT1JHcweqtZPzwnDBKfpJ1oJounPptu7SJGAHc5Fh0D7Z7A+OdEe0IxA5MAAAAABJRU5E
-        rkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFCSURBVDhPdZLRSsNQEETXFr+g1ofQoD4V+uqPiSQootE3
+        /UHRqlCL4gcIPlhr65mwF29ukoVhlsnM3r1JLK2t2XBjNoOPY6BN4YHb+uvX7HZltiKwjYH2DV+7rV1M
+        3yV8lwZT4LnBO/TYfynMKZuuUAw8aw3xGArTtHYw/Jg9wKfwY6TN4RJ+Dhqo6ndCM0vuXGownBNY+MB9
+        107co02+4LE20BsOYZ32Ah95YAIOvJ8SepMnQtYaIMiIfqigCi1HW6Y+0D3A165PVtFP0O5jj6M9AKNe
+        WLhzHjZRzxavwefIwt30k9QigXMPSF8y8Ik+vJMi+Hj2CY+0wYDmKjwgsIDPMLwHjf4Dvog1UJDd0eC6
+        ECoM68jQCTz65PWnbpRvUsXmHpSNk9PCcMkp+kkaQTTduXBbf2kTsIc5SzBqn2z2B2jqR6BnuGoGAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="queuedTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFTSURBVDhPpZLNSsNAFIWjIC4EuxVRfAO7EMQHUEEfJLus
-        8p+AcSVuBRUUX8KNIugDKNrHUOm6INj685102g6J1L8Lh5ncc+6dmZPrfBVFUUzmeb4Yx3EzTdPlKIoW
-        lDP0+MiybAu0QIcGb4L24I5mG0ZWD9/3ZxCdgY9vcOx53rQpGwXET4qFd3BqyvpBQte2Redcd4/1FXTY
-        77BeGq5EkiTbZbHMIaE3D0kZCDXB+x/Bg/bkV20NTW+UdyQmIZOGZBiG82quBnzfa8+JK7YGtOEbEjWB
-        nP5tg14QBHOO/vO/GmhI+Pj7E2Qi5K1N4suSMfcJtKiXiWsD3uBKeTWXketVkqftc0IXvLDfleu2hkM3
-        y+JBIDiC0JDYjWqgofw6NGWj0HjS5KRaUAWaA9d1p0xZPRBpKq9BG/T0DNZnrnxRu/aY0BQ29JsEDJ1V
-        rk/Z4TifA9mNktxOP/MAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFUSURBVDhPnZLNSsNAFIVTQVwIuhWp+Aa6EMQHUEEfJLus
+        8p+AcSVuBRUUX8KNIugDKNrHUOm6INj685102g6JVO2Fw9zcc+7NzJlxfoqiKKbyPF+K43g1TdOVKIqa
+        qhl6fGRZtgNaoEPjh6AcPDBsy8jq4fv+LKIL8PULTj3PmzFto4D4S7PwCc5NWz8oaNu26JLtHrC+gw75
+        Huu14UokSbJbNsscCjrzkJSBUA3O/4yRT8qpr9saht6p7khMQSYNyTAMFzVcA/h+VM4f12wNaDN83tFV
+        Gaf/O6AXBMGCY+558gGImnxMfgSZCHlvk/iybMx9AS36ZeLGgDe4UV3DZeRmleRoh+ygC97I9+W6reGn
+        22XzIBCcQOiR2INqYKD8OjZto9DzZMhZtaEKNEeu606btnog0qu8BW3Q0zFYX9nyVW3bY6Ihh3VNAobO
+        qdan7HCcb7XojWvgUhaqAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="mainTool.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
